--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/Daniil-Khlyvniuk/final-proejct#readme",
   "dependencies": {
-    "npm-run-all": "^4.1.5"
+    "formik": "^2.2.9",
+    "npm-run-all": "^4.1.5",
+    "yup": "^0.32.11"
   }
 }
