--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "url": "https://github.com/Daniil-Khlyvniuk/final-proejct/issues"
   },
   "homepage": "https://github.com/Daniil-Khlyvniuk/final-proejct#readme",
-  "dependencies": {
+  "devDependencies": {
     "husky": "^7.0.4",
     "npm-run-all": "^4.1.5",
     "travis-cli": "^1.0.9"
